--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    1900 Squares
+		    lots of changing squares
 	    </footer>
 	</body>
 </html>
